<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/textViewMainActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_name"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textViewLanguageChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_language_choice"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/spinnerLoc"
        app:layout_constraintRight_toRightOf="@id/spinnerLoc"
        app:layout_constraintBottom_toTopOf="@id/spinnerLoc"/>

    <Spinner
        android:id="@+id/spinnerLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMainActivity" />

    <TextView
        android:id="@+id/textViewThemeChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_theme_choice"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/spinnerThemeColor"
        app:layout_constraintRight_toRightOf="@id/spinnerThemeColor"
        app:layout_constraintBottom_toTopOf="@id/spinnerThemeColor"/>

    <Spinner
        android:id="@+id/spinnerThemeColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="@id/spinnerLoc"
        app:layout_constraintRight_toRightOf="@id/spinnerLoc"
        app:layout_constraintTop_toBottomOf="@id/spinnerLoc" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/spinnerThemeColor"
        app:layout_constraintRight_toRightOf="@id/spinnerThemeColor"
        app:layout_constraintTop_toBottomOf="@id/spinnerThemeColor"
        android:layout_marginTop="20sp"
        android:text="@string/btn_ok"
        android:textSize="20sp"
        android:background="@drawable/corners"
        android:backgroundTint="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/spinnerLoc"
        app:layout_constraintRight_toRightOf="@id/spinnerLoc"
        app:layout_constraintTop_toBottomOf="@id/btnOk"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/text_view_text"
        android:textSize="18sp"
        android:textColor="@android:color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>